--- a/css/header.css
+++ b/css/header.css
@@ -1,83 +1,114 @@
 @font-face {
-    font-family: wow;
+    font-family: rewinder;
     src: url(rewinder.ttf);
-}
-header {
-    height: 45vh;
-    position: relative;
-
 }
 
 @font-face {
-    font-family: game;
-    src: url('running-battle.otf');
-}
-#welcome-banner {
-    z-index: 1000;
-    width: 60%;
-    float: right;
-    padding-right: 3em;
-    /* start positional */
-    /* margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%); */
-    /* end positional */
-    
-    font-family: game;
-    /* font-family: "Honk", system-ui; 
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-    font-variation-settings:
-    "MORF" 15,
-    "SHLN" 50;
-    */
-    
-    font-size: 3.5em;
-    direction:rtl;
-    /* text-align-last: justify;   */ 
+    font-family: box;
+    src: url('alphabox-lite.otf');
 }
 
-#welcome-pre {
-    display: block;
-    font-family: wow;
-    padding-left: 3em;
+#top {
+    height: 150px;
+    z-index: -1;
 }
 
-#header-headshot {
-    display: inline;
-    /* start positional */
+
+/* Thank you, https://css-generators.com/section-divider/ for getting me started */
+#header-section-divider {
+    clip-path: polygon(0 0,25% 0,100% 55px,100% 100%,0 100%);
+    background: linear-gradient(#1e1c1c, #ae9d9d);
+    height: 30vh;
+    width: 1500px;
+    z-index: 0;
     margin: 0;
+    padding: 0;
+}
+
+#pre-text {
+    color:#f2f2f2;
+    text-align: center;
+    font-family: rewinder;
+    padding-top: 20px;
+}
+
+#header-figure {
     position: absolute;
-    bottom: 0;
-    left: 3em;
-    /* end positional */
-
-    width: 20em; 
-    padding-bottom: 3em;
+    z-index: 2;
+    width: 250px;
+    bottom: -35px;
 }
 
-/* asym triangle svg */
-.custom-shape-divider-bottom-1708639076 {
+#stuff {
+    height: 250px;
+    position:relative;
+}
+
+#name {
     position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    overflow: hidden;
-    line-height: 0;
-    transform: rotate(180deg);
+    bottom: 20px;
+    right: 10px;
+    transform: rotate(3deg);
+    font-family: box;
+    letter-spacing: 7px;
+    font-size: 5vw;
+    direction: rtl;
 }
 
-.custom-shape-divider-bottom-1708639076 svg {
-    position: relative;
-    display: block;
-    width: calc(109% + 1.3px);
-    height: 116px;
+#greeting-section {
+    height: 150vh;
+    background-color: #ae9d9d;
+    overflow-y: hidden;
 }
 
-.custom-shape-divider-bottom-1708639076 .shape-fill {
-    fill: #CCCCCC;
+
+
+#greeting-wrapper {
+    border-radius: 20988px;
+    background-color: #494949; 
+    border-color:blue;
+    border-left: 3em;
+    border-right: 3em;
+    border-top: 5em;
+    border-bottom: 5em;
+    border-style: solid;
+    box-shadow: inset 0 10px 10px #171717, inset 0 -10px 10px #171717;
+
+    margin: auto;
+    width: 60%;
+    padding: 3em;
+    /* -webkit-transform: translateZ(0);
+    transform: translateZ(0); */
+    overflow-y: hidden;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+}
+
+#greeting-container {
+    height: 1000vh; /* Add extra height for scrolling effect */
+    line-height: 2em;
+    font-size: 1.5em;
+}
+
+#greeting-text {
+    color: #D1D1D1;
+    padding-bottom: 100px;
+}
+
+#greeting-prefix {
+    color: lime
+}
+
+
+
+#greeting-skip {
+    position:sticky;
+    z-index: 1000;
+    background-color: lime;
+    width: 10em;
+    height: 3em;
+    left: 50%;
+    bottom: 1em;
+    transform: translate(-50%, 1em);
+    border-radius: 1em;
 }
