--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,8 @@ body::-webkit-scrollbar { /* WebKit */
 }
 
 .part {
-   float:left;
-   height: 85vh;
-   padding: 3em 2em 3em 2em;
-   max-width: 50%;
+   height: 100vh;
+   width: 100vw;
 }
 
 /* start other column */
@@ -34,6 +32,8 @@ body::-webkit-scrollbar { /* WebKit */
     height: 100vh;
     color: black;
 }
+
+
 
 /* @keyframes fadeIn {
     0% { opacity: 0; }
