--- a/css/header.css
+++ b/css/header.css
@@ -11,6 +11,7 @@
 #top {
     height: 150px;
     z-index: -1;
+    text-align: center;
 }
 
 
@@ -19,96 +20,113 @@
     clip-path: polygon(0 0,25% 0,100% 55px,100% 100%,0 100%);
     background: linear-gradient(#1e1c1c, #ae9d9d);
     height: 30vh;
-    width: 1500px;
     z-index: 0;
     margin: 0;
     padding: 0;
+    object-fit: contain;
 }
 
 #pre-text {
     color:#f2f2f2;
     text-align: center;
     font-family: rewinder;
-    padding-top: 20px;
+    font-size: 1.5em;
+    padding-top: 25px;
 }
 
-#header-figure {
+#robot {
     position: absolute;
     z-index: 2;
     width: 250px;
     bottom: -35px;
+    left: 25px;
 }
 
 #stuff {
-    height: 250px;
+    height: 300px;
     position:relative;
 }
 
 #name {
     position: absolute;
     bottom: 20px;
-    right: 10px;
+    right: 50px;
     transform: rotate(3deg);
     font-family: box;
     letter-spacing: 7px;
-    font-size: 5vw;
-    direction: rtl;
+    font-size: 5em;
+    box-sizing: content-box;
+    direction: rtl
 }
 
 #greeting-section {
-    height: 150vh;
+    height: 200vh;
     background-color: #ae9d9d;
-    overflow-y: hidden;
+    overflow-y: hidden !important;
+    position:relative;
+    width: 100%;
 }
 
-
-
-#greeting-wrapper {
-    border-radius: 20988px;
-    background-color: #494949; 
-    border-color:blue;
-    border-left: 3em;
-    border-right: 3em;
-    border-top: 5em;
-    border-bottom: 5em;
-    border-style: solid;
-    box-shadow: inset 0 10px 10px #171717, inset 0 -10px 10px #171717;
-
-    margin: auto;
-    width: 60%;
-    padding: 3em;
+#monitor {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 650px;
+    height: 650px;
+    z-index: 1;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    translate: -50% 0;
     /* -webkit-transform: translateZ(0);
     transform: translateZ(0); */
-    overflow-y: hidden;
-    scrollbar-width: none; /* Firefox */
-    -ms-overflow-style: none;  /* Internet Explorer 10+ */
 }
 
+#greeting-wrapper {
+    position: absolute;
+    top:10px;
+    left: 50%;
+    translate: -50% 0;
+    overflow: hidden !important;
+    height: 500px;
+    width: 525px;
+    background-color: black;
+}
+
+
 #greeting-container {
-    height: 1000vh; /* Add extra height for scrolling effect */
+    margin: 25px 0;
+    position: absolute;
+    top: 50px;
+    left: 50%;
+    translate: -50% 0;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    height: 400vh; /* Add extra height for scrolling effect */
     line-height: 2em;
     font-size: 1.5em;
+    overflow: scroll;
+    width: 475px;
 }
+
 
 #greeting-text {
     color: #D1D1D1;
-    padding-bottom: 100px;
 }
 
 #greeting-prefix {
     color: lime
 }
 
-
-
 #greeting-skip {
-    position:sticky;
+    position:absolute;
     z-index: 1000;
     background-color: lime;
     width: 10em;
     height: 3em;
     left: 50%;
-    bottom: 1em;
-    transform: translate(-50%, 1em);
+    bottom: 60px;
+    translate: -50%;
     border-radius: 1em;
 }
