--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,22 +1,43 @@
-@media (width <= 768px) {
-   #header-headshot {
-        width: 48% !important;
-        
-    }    	
+@media (width <= 768px) {	
     body {
         overflow-x: hidden;
     }
-    .part {
-        max-width: none !important;
-        width: 100% !important;
-        height: 60vh !important;
+
+    #pre-text {
+        font-size: 15px !important;
+    }
+    #name {
+        bottom: 250px !important;
+        font-size: 3em !important;    
+        right:auto !important;
     }
 
+    #stuff * {
+        left: 50% !important;
+        translate: -50% 0 !important;
+       
+    }
+    #header-section-divider {
+        clip-path: none !important;
+    }
+
+    #monitor {
+        width: 400px !important;
+        height: 400px !important;
+    }
+
+    #greeting-wrapper {
+        height: 350px !important;
+        width: 350px !important;
+    }
+
+    #greeting-container {
+        width: 300px !important;
+        top: 10px !important;
+        font-size: 20px !important;
+    }
 }
 
 @media (width <= 819px) and (height <= 750px) {
-    #welcome-banner {
-        font-size: 2em !important;
-        display: block;
-    }
+
 }
