Added some logos - all svg.  Made two tiers of logo size based on emphasis, but also coincidentally made some that looked oversized better.

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -8,11 +8,11 @@
     }
 
     
+    /* On short screens we don't want fancy clips cutting out content */
+    .section[style^="clip-path"] {
+        height: 150svh !important;
+    }
     @media (height <= 700px) {
-        /* On short screens we don't want fancy clips cutting out content */
-        .section[style^="clip-path"] {
-            height: 175lvh !important;
-        }
 
         #greeting-section {
             clip-path: polygon(0 100px, 95% 0, 100% 50px, 100% 100%, 0 98%);
