--- a/css/mobile.css
+++ b/css/mobile.css
@@ -7,11 +7,11 @@
         flex-direction: column-reverse;
     }
 
-    #skill-logo-section {
+    .logo-section {
         padding-top: 150px;
     }
 
-    #skill-logo-section .container {
+    .logo-section .container {
         grid-template-columns: 250px !important;
     }
 
@@ -29,7 +29,7 @@
 }
 
 @media(768px < width <= 1250px) {
-    #skill-logo-section .container {
+    .logo-section .container {
         grid-template-columns: repeat(3,250px) !important;
     }
 
